<resources>
    <string name="app_name">Asset Exchange</string>
    <string name="project_overview">Project Overview</string>
    <string name="bottom_nav_menu_command">Activity</string>
    <string name="bottom_nav_menu_feather">Feather</string>
    <string name="bottom_nav_menu_plus">Plus</string>
    <string name="bottom_nav_menu_folder">Folder</string>
    <string name="bottom_nav_menu_send">Send It</string>
    <string name="bottom_nav_menu_filetext">FileText</string>
    <string name="bottom_nav_menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="onboarding_disclaimer_text">By signing up, you are creating a AssetEx. account and agree to AssetEx’s <a href="https://www.google.com">Terms</a> and <a href="https://www.google.com">Privacy Policy</a>.</string>
    <string name="pref_key_file">com.example.assetexdemo1.PREFERENCE_FILE_KEY</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string-array name="project_sort_array">
        <item>Name</item>
        <item>Date Created</item>
    </string-array>
    <string-array name="sort_filter_array">
        <item>Default</item>

        <item>Name (A-Z)</item>
        <item>Name (Z-A)</item>

        <item>Date Created (newest first)</item>
        <item>Date Created (oldest first)</item>

        <item>Due Date (newest first)</item>
        <item>Due Date (oldest first)</item>

        <item>Date Completed (newest first)</item>
        <item>Date Completed (oldest first)</item>
    </string-array>
</resources>