<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_menu_command"
        android:icon="@drawable/bottom_nav_menu_command_icon"
        android:title="@string/bottom_nav_menu_command" />
    <item
        android:id="@+id/bottom_nav_menu_feather"
        android:icon="@drawable/bottom_nav_menu_feather_icon"
        android:title="@string/bottom_nav_menu_feather" />
    <item
        android:id="@+id/bottom_nav_menu_folder"
        android:icon="@drawable/bottom_nav_menu_folder_icon"
        android:title="@string/bottom_nav_menu_folder" />
    <item
        android:id="@+id/bottom_nav_menu_filetext"
        android:icon="@drawable/bottom_nav_menu_filetext_icon"
        android:title="@string/bottom_nav_menu_filetext" />

    <item android:title="@string/bottom_nav_menu_profile" />
</menu>